--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <!--index.html file to run rocket patrol on web-->
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="x-ua-compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Campaign Run</title>
-    <style>
-        body{
-            background-color: beige;
-        }
-    </style>
-</head>
-<body>
-<script src="./lib/phaser.js"></script>
-<script src="./src/prefabs/"></script>
-<script src="./src/prefabs/"></script>
-<script src="./src/scenes/Menu.js"></script>
-<script src="./src/scenes/Play.js"></script>
-<script src="./src/main.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="x-ua-compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Campaign Run</title>
+        <style>
+            body{
+                background-color: beige;
+            }
+        </style>
+    </head>
+    <body>
+        <script src="./lib/phaser.js"></script>
+        <!--<script src="./src/prefabs/"></script>-->
+        <!--<script src="./src/prefabs/"></script>-->
+        <script src="./src/scenes/Menu.js"></script>
+        <!--<script src="./src/scenes/Play.js"></script>-->
+        <!--<script src="./src/scenes/Loading.js"></script>-->
+        <!--<script src="./src/scenes/GameOver.js"></script>-->
+        <script src="./src/main.js"></script>
+    </body>
 </html>
