--- a/index.html
+++ b/index.html
@@ -6,13 +6,6 @@
         <meta http-equiv="x-ua-compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Campaign Run</title>
-        <style>
-            body{
-                background-color: beige;
-            }
-        </style>
-    </head>
-    <body>
         <script src="./lib/phaser.js"></script>
         <!--<script src="./src/prefabs/"></script>-->
         <!--<script src="./src/prefabs/"></script>-->
@@ -21,5 +14,13 @@
         <!--<script src="./src/scenes/Loading.js"></script>-->
         <!--<script src="./src/scenes/GameOver.js"></script>-->
         <script src="./src/main.js"></script>
+        <style>
+            body{
+                background-color: beige;
+            }
+        </style>
+    </head>
+    <body>
+        <div id="game-screen"></div>
     </body>
 </html>
