update: main.js now has Loading in scenes config, index.html has updated script

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <script src="./lib/phaser.js"></script>
         <!--<script src="./src/prefabs/"></script>-->
         <!--<script src="./src/prefabs/"></script>-->
+        <script src="./src/scenes/Loading.js"></script>
         <script src="./src/scenes/Menu.js"></script>
         <!--<script src="./src/scenes/Play.js"></script>-->
-        <!--<script src="./src/scenes/Loading.js"></script>-->
         <!--<script src="./src/scenes/GameOver.js"></script>-->
         <script src="./src/main.js"></script>
         <style>
