--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
         <meta charset="UTF-8">
         <meta http-equiv="x-ua-compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./src/css/indexStyle.css">
         <title>Rocket Runner</title>
         <script src="./lib/phaser.js"></script>
         <!--<script src="./src/prefabs/"></script>-->
         <!--<script src="./src/prefabs/"></script>-->
         <script src="./src/scenes/Loading.js"></script>
         <script src="./src/scenes/Menu.js"></script>
-        <!--<script src="./src/scenes/Play.js"></script>-->
-        <!--<script src="./src/scenes/GameOver.js"></script>-->
+        <script src="./src/scenes/Play.js"></script>
+        <script src="./src/scenes/GameOver.js"></script>
         <script src="./src/main.js"></script>
         <style>
             body{
@@ -21,6 +22,6 @@
         </style>
     </head>
     <body>
-        <div id="game-screen"></div>
+        <div class="center" id="game-screen"></div>
     </body>
 </html>
